manifest_files/env/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ing
  namespace: client
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.microservices.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cities-ing
  namespace: cities
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/cities
spec:
  ingressClassName: nginx
  rules:
  - host: app.microservices.com
    http:
      paths:
      - path: /api/cities
        pathType: Prefix
        backend:
          service:
            name: cities-svc
            port:
              number: 3142
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mountains-ing
  namespace: mountains
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/mountains
spec:
  ingressClassName: nginx
  rules:
  - host: app.microservices.com
    http:
      paths:
      - path: /api/mountains
        pathType: Prefix
        backend:
          service:
            name: mountains-svc
            port:
              number: 3143
